commit by Darya December

--- a/MvcBox/appsettings.json
+++ b/MvcBox/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DEBContext": "Data Source=ms-sql-9.in-solve.ru;Initial Catalog=1gb_iotdb;User Id=1gb_tmc-centert;Password=9b9bad6b7m12;MultipleActiveResultSets=True"
+    "DEBContext": "Data Source=DESKTOP-25321UL;Initial Catalog=1gb_smartbox;User Id=dbadmin;Password=qwerty_123;MultipleActiveResultSets=True"
   }
 }
